--- a/task-tracker/tsconfig.json
+++ b/task-tracker/tsconfig.json
@@ -20,6 +20,7 @@
     "module": "ES2022",
     "strictPropertyInitialization": false,
     "useDefineForClassFields": false,
+    "noImplicitAny": false,
     "lib": [
       "ES2022",
       "dom"
